client/assets/styles/scss/components/external/intercom.scss
// scss-lint:disable ImportantRule IdSelector ColorVariable
// intercom button
.isolation-intercom-flag-on #intercom-launcher {
  left: 21px !important;
}

.intercom-launcher-active {
  z-index: $z-modal !important; // lower z-index under notifications
}

.isolation-intercom-flag-on .intercom-launcher-button {
  background-color: #704093 !important;
  border: $input-border solid #653984 !important;
  border-width: $input-border !important;
  box-shadow: none !important;
  left: -$input-border !important;

  &:hover,
  &:active {
    background-color: $purple !important;
    border-color: rgba($purple-dark,.6) !important;
  }
}

.isolation-intercom-flag-on .intercom-launcher-badge {
  left: 36px !important;
  right: auto !important;
}

// intercom preview
.isolation-intercom-flag-on .intercom-launcher-preview {
  left: 60px !important;
  right: auto !important;
}

.isolation-intercom-flag-on .intercom-launcher-preview-close {
  left: auto !important;
  right: -9px !important;
}

.isolation-intercom-flag-on .intercom-launcher-preview-caret {

  // overriding intercom's styles, use their pseudo element style
  // scss-lint:disable PseudoElement
  &:after {
    border-left: 0 !important;
    border-right-color: $white !important;
    left: -5px !important;
  }

  &:before {
    border-left: 0 !important;
    border-right-color: #ddd !important;
    left: -6px !important;
  }
  // scss-lint:enable PseudoElement
}

// intercom bar
.isolation-intercom-flag-on #intercom-loading,
.isolation-intercom-flag-on #intercom-conversations,
.isolation-intercom-flag-on #intercom-conversation {
  border-right: 1px solid #dadee2 !important;
  left: 0 !important;
}

.isolation-intercom-flag-on .intercom-sheet-body {
  border-left: 0 !important;
}

// hide minimize button
.intercom-sheet-header-minimize-button {
  display: none !important;
}

// classes on body (active window)
.isolation-intercom-flag-on .intercom-messenger-active {

  .layout-wrapper {
    padding-left: $intercom-width - 1px;

    @include media(md) {
      padding-left: 0;
    }
  }

  .modal-backdrop.modal-backdrop {
    padding-left: $intercom-width + 15px;

    @include media(md) {
      padding-left: 15px;
    }

    @media (max-height: $screen-xs), (max-width: $screen-sm) {
      padding: 15px;
    }
  }

  .environment-body > .help-container {
    margin-left: $intercom-width;

    @include media(md) {
      margin-left: 0;
    }
  }
}

// for "preview" messages
#intercom-container .intercom-conversation-preview .intercom-composer,
#intercom-container .intercom-conversation-preview .intercom-sheet-body,
#intercom-container .intercom-conversation-preview .intercom-sheet-header {
  opacity: 1 !important;
}

#intercom-container .intercom-conversation-preview .intercom-small-announcement-body-container {
  max-height: none !important;
}

#intercom-container .intercom-conversation-preview .intercom-small-announcement-body-container:after {
  display: none !important;
}

